--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 /* picture */
 
 img {
-    width: 40em;
+    width: 25em;
 }
 
 /* body */
@@ -51,6 +51,7 @@ h3 {
 p {
     color: whitesmoke;
     align-content: center;
+    margin: 0px 20%;
 }
 
 /* body on about me */
