--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ p {
 /*  */
 
 .projects div {
+    background-image: url(https://images.freecreatives.com/wp-content/uploads/2016/03/Astonishing-Galaxy-Background.jpg);
     background-color: cadetblue;
     padding: 30px;
     width: 200px;
