redo paragraph margins on about me

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ p {
 /* about me paragraph */
 
 .aboutme {
-    margin: 0px 60px;
+    margin: 0px 20%;
 }
 
 /* portfolio page project squares */
